--- a/neww.html
+++ b/neww.html
@@ -1,1 +1,33 @@
-<html></html>
+<html>
+    <head>
+        <title>About Git</title>
+        <link rel="stylesheet" href="Web1.css">
+    </head>
+    <body>
+        <h1 class="a">
+        Welcome To My Page
+            <!--to add banner on top -->
+        </h1>
+        <hr>
+        <p>This is the first web projects.</p>
+        <p>We learned how to push the codes in github</p>
+        <h2><i>Command to push file in git repository</i> </h2>
+        <ul>
+            <li>git init</li>
+            <li>git config user.name "name"</li>
+            <li>git config user.email <email> </li>
+            <li>git remote add origin "link_of_your_repository"</li>
+            <li>git add "file-name.with .exe"</li>
+            <li>git add . {To select all file}</li>
+            <li>git commit -m "message" </li>
+            <li>git push origin master</li>
+            <li>(After edit)git push -u origin master </li>
+        </ul>
+        <hr>
+        <address>
+            <br>
+            <a href="https://github.com/YASHMASTHA" target="_blank">My Github</a><br>
+            <a href="mailto:yshrestha1209.gmail.com" target="_blank">Email me Here</a><br>
+        </address>
+    </body>
+</html>
