--- a/neww.html
+++ b/neww.html
@@ -26,8 +26,8 @@
         <hr>
         <address>
             <br>
-            <a href="https://github.com/YASHMASTHA" target="_blank">My Github</a><br>
-            <a href="mailto:yshrestha1209.gmail.com" target="_blank">Email me Here</a><br>
+            <a href="https://github.com/YASHMASTHA" target="_blank" class="s">My Github</a><br>
+            <a href="mailto:yshrestha1209.gmail.com" target="_blank" class="t">Email me Here</a><br>
         </address>
     </body>
 </html>
