--- a/neww.html
+++ b/neww.html
@@ -22,6 +22,7 @@
             <li>git commit -m "message" </li>
             <li>git push origin master</li>
             <li>(After edit)git push -u origin master </li>
+            <li>git status</li>
         </ul>
         <hr>
         <address>
