--- a/neww.html
+++ b/neww.html
@@ -11,7 +11,8 @@
         <hr>
         <p>This is the first web projects.</p>
         <p>We learned how to push the codes in github</p>
-        <h2><i>Command to push file in git repository</i> </h2>
+
+        <h2 class="item"><i>Command to push file in git repository</i> </h2>
         <ul>
             <li>git init</li>
             <li>git config user.name "name"</li>
